--- a/config2.json
+++ b/config2.json
@@ -1,5 +1,5 @@
 {
-    "TOKEN": "MTE3MTYxNTI3MDI0MzEzOTYzNg.Ghvufx.ReEUxQ93XXg6YgfwyMHR1hWIV9DY1ryRNqvHaA",
+    "TOKEN": "MTE3MTYxNTI3MDI0MzER1hWIV9DY1ryRNqvHaA",
     "prefix": "!",
-    "Ap_id": "1171615270243139636"
+    "Ap_id": "1171615"
 }
